# test

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json
.scaffold/: plan.md
docs/acceptance/: personal-v1-walkthrough-record.json  personal-v1-walkthrough-record.md  windows-live-interoperability-2026-07-12.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: coding-agent-event-contract.md  grok-cli-engine-boundary.md  windows-acp-engine-spike.md  windows-desktop-stack.md
docs/specs/: windows-grok-gui-v1.md
prototypes/first-use-workspace/: README.md  app.js  index.html  styles.css
scripts/: personal-v1-acceptance.mjs  windows-clean-profile-smoke.mjs  windows-engine-smoke.mjs  windows-live-prerequisites.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: engine-host.toml
src-tauri/src/: engine_host.rs  lib.rs  main.rs
src/acceptance/: index.ts  record.test.ts  record.ts  scenarios.ts  walkthrough.test.ts
src/edits/: apply.test.ts  apply.ts  format-diff.test.ts  format-diff.ts  index.ts  memory-host.ts  normalize.test.ts  normalize.ts  selection.test.ts  selection.ts  tauri-host.ts  types.ts
src/engine/: acp-engine.test.ts  acp-engine.ts  constants.ts  discovery.test.ts  discovery.ts  fake-engine.test.ts  fake-engine.ts  identity.test.ts  identity.ts  index.ts  node-host.ts  port.ts  process-cleanup.test.ts  process-cleanup.ts  recovery.test.ts  redact.test.ts  redact.ts  reducer.test.ts  reducer.ts  (+6 more)
(+46 files in other folders)
