[package]
name = "grok-gui"
version = "0.1.0"
description = "Windows-first Grok coding agent desktop shell"
authors = ["xAI"]
edition = "2021"

[lib]
name = "grok_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
